--- a/_toc.yml
+++ b/_toc.yml
@@ -1,7 +1,11 @@
 format: jb-book
 root: index.md
 parts:
+  - caption: Literatures
+    chapters:
+      - file: literatures/README.md
   - caption: Proposals
     chapters:
       - file: proposals/open_source_as_public_goods.md
+      - file: proposals/monopolization.md
       - file: proposals/measuring_social_welfare.md
