--- a/_toc.yml
+++ b/_toc.yml
@@ -1,6 +1,9 @@
 format: jb-book
 root: index.md
 parts:
+  - caption: Facts
+    chapters:
+      - file: facts/README.md
   - caption: Literatures
     chapters:
       - file: literatures/README.md
