--- a/_toc.yml
+++ b/_toc.yml
@@ -1,18 +1,14 @@
 format: jb-book
 root: index.md
 parts:
-  - caption: Facts
-    chapters:
-      - file: facts/README.md
   - caption: Literatures
     chapters:
       - file: literatures/README.md
-  - caption: Topics
-    chapters:
-      - file: topics/equilibriums.md
-      - file: topics/institutions.md
-      - file: topics/strategies.md
+  - caption: Facts
+  chapters:
+    - file: facts/README.md
   - caption: Proposals
     chapters:
-      - file: proposals/open_source_as_public_goods.md
-      - file: proposals/voluntary_organizations.md
+      - file: proposals/equilibriums.md
+      - file: proposals/strategies.md
+      - file: proposals/institutions.md
